# zellij

./: Cargo.toml  rust-toolchain.toml
src/: commands.rs  main.rs  sessions.rs
zellij-client/: Cargo.toml
zellij-client/src/: cli_client.rs  lib.rs  os_input_output.rs
zellij-server/: Cargo.toml
zellij-server/src/: background_jobs.rs  lib.rs  os_input_output.rs  pty.rs  route.rs
zellij-server/src/plugins/: plugin_loader.rs  zellij_exports.rs
zellij-utils/: Cargo.toml
zellij-utils/src/: cli.rs  consts.rs  data.rs  ipc.rs  lib.rs  logging.rs  setup.rs
zellij-utils/src/input/: options.rs
