[package]
name = "zellij-server"
version = "0.42.0"
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition = "2021"
description = "The server-side library for Zellij"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
highway = "0.6.4"
ansi_term = "0.12.1"
async-trait = "0.1.50"
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.6.0"
serde_json = "1.0"
unicode-width = "0.1.8"
url = "2.2.2"
wasmtime-wasi = "21.0.2" # Keep in sync with wasmtime
cassowary = "0.3.0"
zellij-utils = { path = "../zellij-utils/", version = "0.42.0" }
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
typetag = "0.1.7"
chrono = "0.4.19"
sysinfo = "0.29.10"
sixel-tokenizer = "0.1.0"
sixel-image = "0.1.0"
arrayvec = "0.7.2"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
semver = "0.11.0"

[target.'cfg(unix)'.dependencies]

daemonize = "0.5"
close_fds = "0.3.2"

[target.'cfg(windows)'.dependencies]
winpty-rs = "0.3.13"
windows = { version = "0.52.0", features = ["Win32_System_Console"] }


[dependencies.wasmtime]
version = "21.0.2" # Keep in sync with wasmtime-wasi
default-features = false
features = [
  'async',
  'cache',
  'parallel-compilation',
  'cranelift',
  'demangle',
  'addr2line',
  'debug-builtins',
  'runtime',
  'component-model',
  'std',
  'gc',
]

[dev-dependencies]
insta = "1.6.0"
tempfile = "3.2.0"
wasmtime = { version = "21.0.2", features = ["winch"] } # Keep in sync with the other wasmtime dep

[features]
singlepass = ["wasmtime/winch"]
